jdk 16 code optimizations